	always has levels c("FALSE", "TRUE") even if only one (or
	none) of these occur in the variable.

    o	model.frame()'s lm and glm methods had 'data' and 'na.action'
	arguments which they ignored and have been removed.

    o	The defaults data=list() in lm() and glm() could never be
	used and have been removed.  glm had na.action=na.fail, again
	never used.

    o	tools:::.getInternalS3generics() was omitting all the members
	of the S3 group generics, which also accept methods for members.

    o	Some BLASes were returning NA %*% 0 as 0 and some as NA.  Now
	slower but more careful code is used if NAs are present. (PR#4582)

    o	package.skeleton() no longer generates invalid filenames for
	code and help files.  Also, care is taken not to generate
	filenames that differ only by case.

    o	pairs() now respects axis graphical parameters such as
	cex.main, font.main and las.

    o	Saving images of packages with namespaces (such as mle) was
	not compressing the image.

    o	When formula.default() returned a terms object, it returned a
	result of class c("terms", "formula") with different
	subsetting rules from an object of class "formula".

    o	The standalone Rmath library did not build correctly on systems
	with inaccurate log1p.

    o	Specifying asp is now respected in calls like plot(1, 10, asp=1)
	with zero range on both axes.

    o	outer() called rep() with an argument the generic does not
	have, and discarded the class of the answer.

    o	object.size() now returns a real (not integer) answer and so
	can cope with objects occupying more than 2Gb.

    o	Lookups base:: and ::: were not confining their search to the
	named package/namespace.

    o	qbinom() was returning NaN for prob = 0 or 1 or size = 0 even
	though the result is well-defined.  (In part, PR#5900.)

    o	par(mgp)[2] was being interpreted as relative to par(mgp)[3].
	(PR#6045)

    o	Versioned install was broken both with and without namespaces:
	no R code was loaded.
